@@ -16,14 +16,14 @@ my $x = Math::BigFloat->new(1);
 ++$x;
 is($x, 2, '$x is 2');
 
-like(Math::BigFloat->config()->{with}, qr/^Math::BigInt::(Fast)?Calc\z/,
+like(Math::BigFloat->config("with"), qr/^Math::BigInt::(Fast)?Calc\z/,
      '"with" ignored');
 
 # now override
 Math::BigFloat->import(with => 'Math::BigInt::Subclass');
 
 # the "with" argument is ignored
-like(Math::BigFloat->config()->{with}, qr/^Math::BigInt::(Fast)?Calc\z/,
+like(Math::BigFloat->config("with"), qr/^Math::BigInt::(Fast)?Calc\z/,
      '"with" ignored');
 
 # all tests done
